Working multi-site demo

--- a/priv/web/index.html
+++ b/priv/web/index.html
@@ -24,7 +24,7 @@
         <canvas id="bar-chart"></canvas>
       </div>
     </div>
-    <!-- <script src="/js/socket.js"></script> -->
+    <script src="/js/socket.js" type="module"></script>
     <script src="/js/bars.js" type="module"></script>
   </body>
 </html>
